# Food-Delivery-Bench

./: .gitignore  CONFIGURATION.md  CONTRIBUTING.md  README.md  calculate_call.py  calculate_plan_style.py  configuration.md  environment.yml  pyproject.toml  readd.py  readme.md  recalculate.py
LLM-Delivery/: .gitignore  .gitmodules  BUS_SYSTEM_README.md  LICENSE  LLMDelivery.py  LLMDelivery_external.py  README.md  main_external.ipynb  unrealcv_user.py  user_communicator.py  visualization_agent.py
LLM-Delivery/Base/: ActionSpace.py  Bus.py  BusManager.py  Car.py  Comms.py  DeliveryMan.py  EScooter.py  Food.py  Graph.py  Insulated_bag.py  Map.py  Map_Before.py  Order.py  Prompt.py  RunRecorder.py  Settlement.py  Store.py  Timer.py  Types.py  __init__.py
LLM-Delivery/Communicator/: Communicator.py  __init__.py  unrealcv_basic.py  unrealcv_delivery.py
LLM-Delivery/Config/: agent_config.json  config.py
SimWorld/: LICENSE  setup.py  test.ipynb
city_generation/: enrich_deliverybench_map.py  enrich_world_roads_plus_bbox.py  generate_city_layout.py
draw/: calculate1.py  calculate2.py  calculate3.py  draw_figure1.py  draw_figure2.py  draw_figure3.py
evaluation/: ablation_comparison_summary.csv  agent_performance_analysis.py  analyze_contradictions.py  before_agent_performance_analysis.py  compare_ablation_results.py  evaluate_trajectory.py  lingjun_agent_performance_analysis.py  performance_analysis_report.md  recalculate.py
initial_results/: model_performance_summary.csv
jiawei/: large-26.json
simworld/: .gitignore  README.md
vlm_delivery/: __init__.py
(+3177 files in other folders)
